tests/success/pointer_arithmetic_resolve6.bz
function test()
{
	(consteval {
		let p: ?*S = null;
		if (p != null)
		{
			p - 1;
		}
	});
}

struct S
{
	.i: int32;
}
